# p2p_desktop_share_new

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeLists.txt.backup  GIT_VERSION.json  GIT_VERSION.txt  NETWORK_IMPLEMENTATION.md  NuGet.Config  README.md  Task.md  vcpkg.json
.github/workflows/: package-platforms.yml
apps/linux_tray/: main.cpp
apps/macos_menubar/: Info.plist  main.mm
apps/server_cli/: main.cpp  resource.rc
cert/: openssl_san.cnf
desktop_host/: BUILD_GUIDE.md  BUILD_STATUS.md  run_desktop_host.bat  test_desktop_host.ps1
desktop_host/LanScreenShareHostApp/: LanScreenShareHostApp.sln  nuget.config
desktop_host/LanScreenShareHostApp/LanScreenShareHostApp/: App.cpp  HttpClient.cpp  LanScreenShareHostApp.vcxproj  LanScreenShareHostApp.vcxproj.filters  MainWindow.cpp  MainWindow.h  ServerController.cpp  UrlUtil.cpp  UrlUtil.h  WebViewHost.cpp  WebViewHost.h  main.cpp  packages.config
docs/: ARCHITECTURE.md  BUILD_WINDOWS.md  CODE_STYLE.md  CROSS_PLATFORM_REFACTOR_PLAN.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  FUNCTIONAL_SPEC.md  MAINWINDOW_REMAINING_RESPONSIBILITIES.md  PRIVACY_POLICY.md  PROGRESS_WIP.md  README.md  RELEASE_VALIDATION.md  SIGNALING_PROTOCOL.md  STORE_CERTIFICATION_NOTES.md  UNFINISHED_FEATURES.md  WINDOWS_BOOTSTRAP_GUIDE.md  WINDOWS_PACKAGING.md  WINDOWS_STORE_PACKAGING.md
docs/desktop_host/: BUILD_GUIDE.md  BUILD_STATUS.md  GUIDED_ONBOARDING_FLOW_SPEC.md  HTTP_FIRST_REDESIGN_PLAN.md  SIMPLE_MODE_DEVELOPMENT_SPEC.md  SIMPLE_MODE_PRODUCT_SPEC.md  SIMPLE_MODE_TASKS.md
scripts/: build.ps1  build_linux.sh  gen_self_signed_cert.ps1  package_common.sh  package_linux.sh  package_macos.sh  regenerate_icons.ps1
scripts/linux/: Install-LanScreenShare.sh  Install-ViewMesh.sh  Uninstall-LanScreenShare.sh  Uninstall-ViewMesh.sh  launch_lan_screenshare_linux_tray.sh  launch_viewmesh_linux_tray.sh
scripts/windows/: Check-WebView2Runtime.ps1  Install-LanScreenShare.ps1  Install-ViewMesh.ps1  README.md  Run-NetworkDiagnostics.ps1  Trust-LocalCertificate.ps1  Uninstall-LanScreenShare.ps1  Uninstall-ViewMesh.ps1  browser_smoke.ps1  build.ps1  clean_nuget_cache.ps1  common.ps1  doctor.ps1  package.ps1  package_common.ps1  package_store.ps1  run_desktop_host.bat  run_desktop_host.ps1  run_server.ps1  smoke_server.ps1  stress_server.ps1  test_desktop_host.ps1  test_invoke_external.ps1  validate_release.ps1
src/core/cert/: cert_inspector.cpp  cert_inspector.h  cert_manager.cpp  cert_manager.h  cert_san.cpp  cert_san.h  cert_types.h
src/core/i18n/: localization.h
src/core/network/: endpoint_selection.cpp  endpoint_selection.h  network_manager.cpp  network_manager.h  network_types.h
src/core/protocol/: json_helpers.h  messages.cpp  messages.h
src/core/runtime/: admin_shell_coordinator.cpp  admin_shell_coordinator.h  admin_shell_runtime_publisher.cpp  admin_shell_runtime_publisher.h  admin_view_model_assembler.cpp  admin_view_model_assembler.h  bootstrap_policy.cpp  bootstrap_policy.h  desktop_edit_session_presenter.cpp  desktop_edit_session_presenter.h  desktop_layout_presenter.cpp  desktop_layout_presenter.h  desktop_runtime_snapshot.cpp  desktop_runtime_snapshot.h  desktop_shell_presenter.cpp  desktop_shell_presenter.h  diagnostics_view_model_assembler.cpp  diagnostics_view_model_assembler.h  host_action_coordinator.cpp  host_action_coordinator.h  host_observability_coordinator.cpp  host_observability_coordinator.h  host_runtime_coordinator.cpp  host_runtime_coordinator.h  host_runtime_scheduler.cpp  host_runtime_scheduler.h  host_session_coordinator.cpp  host_session_coordinator.h  host_shell_lifecycle_coordinator.cpp  host_shell_lifecycle_coordinator.h  native_shell_alert_coordinator.cpp  native_shell_alert_coordinator.h  (+14 more)
src/desktop_host/: AdminBackend.cpp  AdminBackend.h  App.cpp  App.h  DesktopCommandIds.h  DesktopHostPageBuilders.cpp  DesktopHostPageBuilders.h  HttpClient.cpp  HttpClient.h  LanScreenShareHostApp.sln  LanScreenShareHostApp.vcxproj  LanScreenShareHostApp.vcxproj.filters  MainWindow.cpp  MainWindow.h  NativeControlFactory.cpp  NativeControlFactory.h  ServerController.cpp  ServerController.h  ShellEffectExecutor.cpp  ShellEffectExecutor.h  ViewMeshApp.sln  ViewMeshApp.vcxproj  WebViewHost.cpp  WebViewRuntimeDetector.cpp  WebViewRuntimeDetector.h  WebViewShellAdapter.cpp  WebViewShellAdapter.h  pch.h  resource.rc  winrt_stubs.h
src/host_shell/: native_shell_action_controller.cpp  native_shell_action_controller.h  native_shell_live_poller.cpp  native_shell_live_poller.h  native_shell_runtime_loop.cpp  native_shell_runtime_loop.h
src/platform/: factory.cpp  host_runtime_refresh_pipeline.cpp  host_runtime_refresh_pipeline.h  platform_service_facade.cpp
src/tools/: lan_screenshare_server_main.cpp
src/ui/: INTEGRATION_NOTES.md
tests/fixtures/: server_test_cert.pem  server_test_key.pem
tests/shared/: admin_shell_coordinator_tests.cpp  admin_shell_runtime_publisher_tests.cpp  admin_view_model_assembler_tests.cpp  bootstrap_policy_tests.cpp  browser_smoke_tests.cpp  cert_tests.cpp  desktop_edit_session_presenter_tests.cpp  desktop_layout_presenter_tests.cpp  desktop_runtime_snapshot_tests.cpp  desktop_shell_presenter_tests.cpp  diagnostics_view_model_assembler_tests.cpp  host_action_coordinator_tests.cpp  host_observability_coordinator_tests.cpp  host_runtime_coordinator_tests.cpp  host_runtime_scheduler_tests.cpp  host_session_coordinator_tests.cpp  host_shell_lifecycle_coordinator_tests.cpp  native_shell_action_controller_tests.cpp  native_shell_alert_coordinator_tests.cpp  native_shell_runtime_loop_tests.cpp  native_shell_status_tracker_tests.cpp  network_diagnostics_policy_tests.cpp  network_tests.cpp  platform_service_facade_tests.cpp  remote_probe_orchestrator_tests.cpp  runtime_controller_tests.cpp  share_artifact_service_tests.cpp  shell_bridge_presenter_tests.cpp  shell_chrome_presenter_tests.cpp
www/: host-app.webmanifest  host-sw.js  host.html  viewer-app.webmanifest  viewer-sw.js  viewer.html
www/assets/: app_host.js  app_viewer.js  common.js  i18n.js  share_card_qr.bundle.js  style.css
(+65 files in other folders)
